--- a/app/views/host/listings/edit.html.erb
+++ b/app/views/host/listings/edit.html.erb
@@ -1,2 +1,18 @@
-<h1>Host::Listings#edit</h1>
-<p>Find me in app/views/host/listings/edit.html.erb</p>
+<h1>Edit Your article: <%= @listing.title%></h1>
+
+<%= render partial: "shared/errors"%>
+<form action="<%= host_listing_path(@listing) %>" method="post">
+    <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
+    <input type="hidden" name="_method" value="PUT">
+
+    <label for="title">Title: </label>
+    <input type="text" name="listing[title]" id="title" value="<%=@listing.title%>"><br><br>
+
+    <label for="about">About: </label>
+    <textarea name="listing[about]" id="about"><%=@listing.about%></textarea><br><br>
+
+    <label for="max_guests">Max Guest: </label>
+    <input type="number" name="listing[max_guests]" id="max_guests" value="<%=@listing.max_guests%>"min="1" max="100" step="1"><br><br>
+
+    <input type="submit" value="Update Listing">
+</form>
