--- a/app/views/host/listings/new.html.erb
+++ b/app/views/host/listings/new.html.erb
@@ -1,2 +1,21 @@
-<h1>Host::Listings#new</h1>
-<p>Find me in app/views/host/listings/new.html.erb</p>
+<h1>List Your Property</h1>
+
+<% if flash[:errors]%>
+    <% flash[:errors].each do |error|%>
+        <%= error%>
+    <% end%>
+<% end%>
+<form action="<%= host_listings_path %>" method="post">
+    <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
+
+    <label for="title">Title: </label>
+    <input type="text" name="listing[title]" id="title" value="<%=@listing.title%>"><br><br>
+
+    <label for="about">About: </label>
+    <input type="text" name="listing[about]" id="about" rows="5" value="<%=@listing.about%>" max_lines="5"><br><br>
+
+    <label for="max_guests">Max Guest: </label>
+    <input type="number" name="listing[max_guests]" id="max_guests" value="<%=@listing.max_guests%>"min="1" max="100" step="1"><br><br>
+
+    <input type="submit" value="Create Listing">
+</form>
