--- a/app/views/host/listings/show.html.erb
+++ b/app/views/host/listings/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Host::Listings#show</h1>
-<p>Find me in app/views/host/listings/show.html.erb</p>
+ <h1><%=@listing.title%></h1>
+ <p style="text-align:right;"><%= link_to "Edit", edit_host_listing_path(@listing) %> </p>
+<pre><%=JSON.pretty_generate(@listing.as_json)%></pre>
