--- a/app/views/host/listings/edit.html.erb
+++ b/app/views/host/listings/edit.html.erb
@@ -1,6 +1,10 @@
 <h1>Edit Your article: <%= @listing.title%></h1>
 
-<%= render partial: "shared/errors"%>
+<% if flash[:errors]%>
+    <% flash[:errors].each do |error|%>
+        <%= error%>
+    <% end%>
+<% end%>
 <form action="<%= host_listing_path(@listing) %>" method="post">
     <input type="hidden" name="authenticity_token" value="<%=form_authenticity_token%>">
     <input type="hidden" name="_method" value="PUT">
