--- a/app/views/host/listings/new.html.erb
+++ b/app/views/host/listings/new.html.erb
@@ -12,7 +12,7 @@
     <input type="text" name="listing[title]" id="title" value="<%=@listing.title%>"><br><br>
 
     <label for="about">About: </label>
-    <input type="text" name="listing[about]" id="about" rows="5" value="<%=@listing.about%>" max_lines="5"><br><br>
+    <textarea name="listing[about]" id="about"><%=@listing.about%></textarea><br><br>
 
     <label for="max_guests">Max Guest: </label>
     <input type="number" name="listing[max_guests]" id="max_guests" value="<%=@listing.max_guests%>"min="1" max="100" step="1"><br><br>
